@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 ========================
  -- In select/linear - Fix logic to prevent over-subscribing memory with shared
     nodes (Shared=YES or Shared=FORCE).
+ -- Fix for handling -N and --ntasks-per-node without specifying -n with
+    salloc and sbatch.
 
 * Changes in SLURM 2.1.8
 ========================
